--- a/src/app/nested-form/nested-form.component.html
+++ b/src/app/nested-form/nested-form.component.html
@@ -13,27 +13,27 @@
 
     <div formGroupName="cellPhone">
       <mat-form-field>
-        <input matInput formControlName="area" formControlName="area" />
+        <input matInput placeholder="area" formControlName="area" />
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput formControlName="prefix" formControlName="prefix" />
+        <input matInput placeholder="prefix" formControlName="prefix" />
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="line" formControlName="line" />
+        <input matInput placeholder="line" formControlName="line" />
       </mat-form-field>
     </div>
 
     <div formGroupName="homePhone">
       <mat-form-field>
-        <input matInput formControlName="area" formControlName="area" />
+        <input matInput placeholder="area" formControlName="area" />
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput formControlName="prefix" formControlName="prefix" />
+        <input matInput placeholder="prefix" formControlName="prefix" />
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="line" formControlName="line" />
+        <input matInput placeholder="line" formControlName="line" />
       </mat-form-field>
     </div>
   </div>
